Closes #66 - Improve TestHelper and refactor tests